Spacing and alignment issues resolved related to comments, agenda items and deliverables

--- a/app/react/components/Comment/index.css
+++ b/app/react/components/Comment/index.css
@@ -2,8 +2,8 @@
   display: flex;
   flex-direction: row;
   width: 100%;
-  padding: 20px 0px;
-  min-height: 8.375rem;
+  padding: 10px 0px;
+  /*min-height: 8.375rem;*/
   color : #89949E;
 }
 
@@ -24,6 +24,7 @@
   font-family: Gotham-Book;
   font-size: 1.375rem;
   line-height : 1.875rem;
+  min-height: 4rem;
 }
 
 .timeContainer {
@@ -31,7 +32,7 @@
   padding: 0;
   font-family: Gotham-Book;
   font-size: 1rem;
-  line-height : 4rem;
+  margin-top: 1.563rem;
   color : #8C9295;
 }
 
