--- a/app/react/components/DeliverableInTimeline/index.css
+++ b/app/react/components/DeliverableInTimeline/index.css
@@ -1,7 +1,7 @@
 .root {
   display: flex;
   flex-direction: row;
-  padding: 20px 0px;
+  padding: 10px 0px;
   color : #89949E;
 }
 
@@ -78,7 +78,7 @@
 .timeContainer {
   font-family: Gotham-Book;
   font-size: 1rem;
-  line-height : 4rem;
+  margin-top: 1.563rem;
   color : #8C9295;
 }
 .dueOnLabel {
@@ -101,7 +101,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  margin-left: 4.563rem;
+  margin-left: 5.5rem;
   padding-bottom: 20px;
 }
 
@@ -124,4 +124,20 @@
   color: #616C73;
   font-family: Gotham-Book;
   font-size: 1.25rem;
+}
+
+.content a,
+.content a:hover,
+.content a:active,
+.content a:focus {
+  color: #130F22;
+}
+
+.textContainer {
+  display: flex;
+  flex-direction: row;
+}
+
+.icon {
+  flex: none;
 }
